prevent the screen from shifting

--- a/src/client/styles/scss/_page_growi.scss
+++ b/src/client/styles/scss/_page_growi.scss
@@ -22,7 +22,9 @@
         }
       }
     }
-    .grw-compact-subnavbar {
+    &.grw-compact-subnavbar {
+      // prevent the screen from shifting
+      margin-bottom: 35px;
       h2 {
         font-size: 20px;
         line-height: 1.1em;
